--- a/index.html
+++ b/index.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Felipe Moctezuma | Web Developer</title>
         <link rel="stylesheet" href="./static/css/style.css" type="text/css" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container">
-            <div class="inline left">
-                <div class="profile">
-                    <img src="https://avatars0.githubusercontent.com/u/5577730?v=4&u=89658964ad28131942774e7a128b3e239720574c&s=400" alt="usr"></img>
+        <div class="bg-dark" id="navbarHeader">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-2 py-4 text-center">
+                        <img class="img-fluid rounded" src="https://avatars0.githubusercontent.com/u/5577730?v=4&u=89658964ad28131942774e7a128b3e239720574c&s=200" alt="usr"></img>
+                    </div>
+                    <div class="col-sm-7 py-4">
+                        <h4 class="text-white">{{name}}</h4>
+                        <p class="text-muted">{{descripcion}}</p>
+                    </div>
+                    <div class="col-sm-3 py-4">
+                        <h4 class="text-white">Contacto</h4>
+                        <ul class="list-unstyled">
+                            <li v-for="link in contacto">
+                                <a class="text-white" target="_blank" :href="link.href">
+                                    <i :class="'fa ' + link.icon" aria-hidden="true"></i> {{link.texto}}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <h1><small>Felipe Moctezuma</small></h1>
-                <h3><center><small><i>Mobile and Web Developer</i></small></center></h3>
-                <p><center><i class="fa fa-map-marker" aria-hidden="true"></i> Cali, Colombia</center></p>
-                <br/>
-                <p><a href="mailto:luisfe.moctezuma@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> luisfe.moctezuma@gmail.com</a> </p>
-                <p><a target="_blank" href="https://github.com/femoru"><i class="fa fa-github" aria-hidden="true"></i> Github</a> </p>
-                <p><a href="skype:rhadhy?chat"><i class="fa fa-skype" aria-hidden="true"></i> Skype</a> </p>
             </div>
         </div>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="navbarLinks">
+            <div class="container navbar-collapse ">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item" v-for="tabi in tabs">
+                  <a class="nav-link" :href="'#'+tabi">{{tabi}}</a>
+                </li>
+              </ul>
+            </div>
+        </nav>
+
+        <div class="container-fluid">
+
+        </div>
+        <script src="js/vue.min.js"></script>
+        <script src="js/index.js" charset="utf-8"></script>
     </body>
 </html>
