--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Felipe Moctezuma | Web Developer</title>
-        <link rel="stylesheet" href="./static/css/style.css" type="text/css" />
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="bg-dark" id="navbarHeader">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-2 py-4 text-center">
-                        <img class="img-fluid rounded" src="https://avatars0.githubusercontent.com/u/5577730?v=4&u=89658964ad28131942774e7a128b3e239720574c&s=200" alt="usr"></img>
-                    </div>
-                    <div class="col-sm-7 py-4">
-                        <h4 class="text-white">{{name}}</h4>
-                        <p class="text-muted">{{descripcion}}</p>
-                    </div>
-                    <div class="col-sm-3 py-4">
-                        <h4 class="text-white">Contacto</h4>
-                        <ul class="list-unstyled">
-                            <li v-for="link in contacto">
-                                <a class="text-white" target="_blank" :href="link.href">
-                                    <i :class="'fa ' + link.icon" aria-hidden="true"></i> {{link.texto}}
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="navbarLinks">
-            <div class="container navbar-collapse ">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item" v-for="tabi in tabs">
-                  <a class="nav-link" :href="'#'+tabi">{{tabi}}</a>
-                </li>
-              </ul>
-            </div>
-        </nav>
 
-        <div class="container-fluid">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Felipe Moctezuma</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+</head>
 
-        </div>
-        <script src="js/vue.min.js"></script>
-        <script src="js/index.js" charset="utf-8"></script>
-    </body>
+<body class="bg-dark">
+  <nav class="navbar navbar-expand-lg fixed-bottom navbar-dark bg-dark border-success border border-left-0 border-bottom-0 border-right-0">
+    <div class="container my-md-3">
+      <header>
+        <a class="text-light" href="#">
+          <img class="rounded-circle img-fluid" src="https://avatars1.githubusercontent.com/u/5577730?v=4" width="78"> Felipe Moctezuma
+          <!-- <img class="rounded-circle" src="http://via.placeholder.com/52/7f7f7f/fff?text=FM"> -->
+          <!-- <img class="rounded-circle" src="https://avatars1.githubusercontent.com/u/5577730?v=4" width="52"> -->
+          <!-- Felipe Moctezuma -->
+        </a>
+        <p class="text-light my-0">
+          <small>Self-taught developer who loves to learn and create new things every day</small>
+        </p>
+        <p class="text-light my-0">
+          <small>Make web not war</small>
+        </p>
+      </header>
+
+      <ul class="list-inline text-light my-3">
+        <li class="list-inline-item">
+          <a class=" text-light" href="https://github.com/femoru"><i class="fa fa-fw fa-github"></i></a>
+        </li>
+        <li class="list-inline-item">
+          <a class=" text-light" href="https://www.linkedin.com/in/felipe-moctezuma-ruiz-07a16331/"><i class="fa fa-fw fa-linkedin"></i></a>
+        </li>
+        <li class="list-inline-item">
+          <a class=" text-light" href="https://twitter.com/rhadhy"><i class="fa fa-fw fa-twitter"></i></a>
+        </li>
+        <li class="list-inline-item">
+          <a class=" text-light" href="mailto:luisfe.moctezuma@gmail.com"><i class="fa fa-fw fa-paper-plane"></i></a>
+        </li>
+        <li class="list-inline-item">
+          <a class=" text-light" href="/resume"><b>RESUME</b></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <script src="js/vue.min.js"></script>
+  <script src="js/index.js" charset="utf-8"></script>
+</body>
+
 </html>
